src/test/rustdoc-ui/doc-alias-crate-level.rs
#![feature(doc_alias)]

#![doc(alias = "shouldn't work!")] //~ ERROR
